syntax = "proto3";

package gRPC.demo;

option java_package = "gRPC.demo";
option java_multiple_files = true;

message FileRequest {
    string student_name = 1;
}

message FileResponse {
    bool is_successful = 1;
}

service CreateFileService {
    rpc CreateFile(FileRequest) returns (FileResponse);
}
