syntax = "proto3";

package gRPC.demo;

option java_package = "gRPC.demo";
option java_multiple_files = true;

message WriteRequest {
    string student_name = 1;
    string reg_no = 2;
    string course = 3;
}

message WriteResponse {
    bool is_successful = 1;
}

service WriteToFileService {
    rpc WriteToFile(WriteRequest) returns (WriteResponse);
}
